# airline_financials

./: .gitignore  Dockerfile  LICENSE  README.md  SEC_EDGAR_prep_for_summarization.ipynb  SEC_EDGAR_scraping_for_summarization.ipynb  SEC_filings_scraping.ipynb  airline_comparison.py  airline_comparison_streamlit.py  airline_financial_data.csv  airline_financial_data.xlsx  airline_financials_summaries.json  insights_pipeline.ipynb  llm_summarization.py  requirements.txt  run.sh  share_repurchases.csv  vercel.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy.yml  main_airlinefinancialdashboard.yml  refresh-data.yml
.streamlit/: .gitignore  config.toml
airline-dashboard/: .gitignore  README.md
airline-dashboard/core/: README.md  pyproject.toml  requirements.txt
airline-dashboard/core/notebooks/: run_pipeline.ipynb
airline-dashboard/core/scripts/: __init__.py  build_data.py  make_sample_data.py
airline-dashboard/core/sec_pipeline/: __init__.py  chunk.py  config.py  edgar_client.py  embed.py  parse.py  pipeline.py  summarize.py  xbrl.py
airline-dashboard/core/tests/: test_pipeline.py
airline-dashboard/deploy/: README.md  cloudbuild.streamlit.yaml
airline-dashboard/quotes-api/: Dockerfile  README.md  main.py  requirements.txt
legacy-archive/: Dockerfile  README.md  SEC_EDGAR_prep_for_summarization.ipynb  SEC_EDGAR_scraping_for_metrics.ipynb  SEC_EDGAR_scraping_for_summarization.ipynb  airline_comparison.py  insights_pipeline_alternate.ipynb  non_SEC_summaries.json  non_scraped_insights.ipynb
legacy-archive/.streamlit/: config.toml
(+19 files in other folders)
